--- a/ATS230704_R1.ioc
+++ b/ATS230704_R1.ioc
@@ -179,31 +179,32 @@ Mcu.Pin11=PA9
 Mcu.Pin12=PA10
 Mcu.Pin13=PA13
 Mcu.Pin14=PA14
-Mcu.Pin15=PD2
-Mcu.Pin16=PB3
-Mcu.Pin17=PB4
-Mcu.Pin18=PB6
-Mcu.Pin19=PB7
+Mcu.Pin15=PC12
+Mcu.Pin16=PD2
+Mcu.Pin17=PB3
+Mcu.Pin18=PB4
+Mcu.Pin19=PB6
 Mcu.Pin2=PF0-OSC_IN
-Mcu.Pin20=VP_CORDIC_VS_CORDIC
-Mcu.Pin21=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_SYS_VS_DBSignals
-Mcu.Pin24=VP_TIM1_VS_ControllerModeTrigger
-Mcu.Pin25=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin26=VP_TIM1_VS_no_output4
-Mcu.Pin27=VP_TIM1_VS_no_output5
-Mcu.Pin28=VP_TIM1_VS_no_output6
-Mcu.Pin29=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin20=PB7
+Mcu.Pin21=VP_CORDIC_VS_CORDIC
+Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin24=VP_SYS_VS_DBSignals
+Mcu.Pin25=VP_TIM1_VS_ControllerModeTrigger
+Mcu.Pin26=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin27=VP_TIM1_VS_no_output4
+Mcu.Pin28=VP_TIM1_VS_no_output5
+Mcu.Pin29=VP_TIM1_VS_no_output6
 Mcu.Pin3=PF1-OSC_OUT
-Mcu.Pin30=VP_MotorControl_MC_ENABLED
+Mcu.Pin30=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin31=VP_MotorControl_MC_ENABLED
 Mcu.Pin4=PC2
 Mcu.Pin5=PA2
 Mcu.Pin6=PB1
 Mcu.Pin7=PB13
 Mcu.Pin8=PB14
 Mcu.Pin9=PB15
-Mcu.PinsNb=31
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -595,6 +596,10 @@ PB7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB7.Locked=true
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
+PC12.GPIOParameters=GPIO_Label
+PC12.GPIO_Label=U1_DIR
+PC12.Locked=true
+PC12.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC13.GPIO_Label=M1_OCP
 PC13.GPIO_PuPd=GPIO_PULLUP
