--- a/ATS230704_R1.ioc
+++ b/ATS230704_R1.ioc
@@ -153,23 +153,26 @@ FREERTOS.Tasks01=Print_Task,8,256,StartPrintTask,As weak,NULL,Static,PrintTaskBu
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.IPParameters=Timing
+I2C1.Timing=0x30A0A7FB
 KeepUserPlacement=false
 Mcu.CPN=STM32G474RET3
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=TIM6
-Mcu.IP11=USART1
-Mcu.IP12=USART2
+Mcu.IP10=TIM1
+Mcu.IP11=TIM6
+Mcu.IP12=USART1
+Mcu.IP13=USART2
 Mcu.IP2=CORDIC
 Mcu.IP3=DMA
 Mcu.IP4=FREERTOS
-Mcu.IP5=MotorControl
-Mcu.IP6=NVIC
-Mcu.IP7=RCC
-Mcu.IP8=SYS
-Mcu.IP9=TIM1
-Mcu.IPNb=13
+Mcu.IP5=I2C1
+Mcu.IP6=MotorControl
+Mcu.IP7=NVIC
+Mcu.IP8=RCC
+Mcu.IP9=SYS
+Mcu.IPNb=14
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -179,32 +182,34 @@ Mcu.Pin11=PA9
 Mcu.Pin12=PA10
 Mcu.Pin13=PA13
 Mcu.Pin14=PA14
-Mcu.Pin15=PC12
-Mcu.Pin16=PD2
-Mcu.Pin17=PB3
-Mcu.Pin18=PB4
-Mcu.Pin19=PB6
+Mcu.Pin15=PA15
+Mcu.Pin16=PC12
+Mcu.Pin17=PD2
+Mcu.Pin18=PB3
+Mcu.Pin19=PB4
 Mcu.Pin2=PF0-OSC_IN
-Mcu.Pin20=PB7
-Mcu.Pin21=VP_CORDIC_VS_CORDIC
-Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin23=VP_SYS_VS_Systick
-Mcu.Pin24=VP_SYS_VS_DBSignals
-Mcu.Pin25=VP_TIM1_VS_ControllerModeTrigger
-Mcu.Pin26=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin27=VP_TIM1_VS_no_output4
-Mcu.Pin28=VP_TIM1_VS_no_output5
-Mcu.Pin29=VP_TIM1_VS_no_output6
+Mcu.Pin20=PB6
+Mcu.Pin21=PB7
+Mcu.Pin22=PB9
+Mcu.Pin23=VP_CORDIC_VS_CORDIC
+Mcu.Pin24=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_SYS_VS_DBSignals
+Mcu.Pin27=VP_TIM1_VS_ControllerModeTrigger
+Mcu.Pin28=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin29=VP_TIM1_VS_no_output4
 Mcu.Pin3=PF1-OSC_OUT
-Mcu.Pin30=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin31=VP_MotorControl_MC_ENABLED
+Mcu.Pin30=VP_TIM1_VS_no_output5
+Mcu.Pin31=VP_TIM1_VS_no_output6
+Mcu.Pin32=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin33=VP_MotorControl_MC_ENABLED
 Mcu.Pin4=PC2
 Mcu.Pin5=PA2
 Mcu.Pin6=PB1
 Mcu.Pin7=PB13
 Mcu.Pin8=PB14
 Mcu.Pin9=PB15
-Mcu.PinsNb=32
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -532,6 +537,8 @@ PA14.GPIO_Label=TCK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.Mode=I2C
+PA15.Signal=I2C1_SCL
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=M1_BUS_VOLTAGE
 PA2.Locked=true
@@ -596,6 +603,8 @@ PB7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB7.Locked=true
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC12.GPIOParameters=GPIO_Label
 PC12.GPIO_Label=U1_DIR
 PC12.Locked=true
