--- a/ATS230704_R1.ioc
+++ b/ATS230704_R1.ioc
@@ -41,13 +41,24 @@ ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
 ADC1.ScanConvMode=ADC_SCAN_ENABLE
 ADC1.master=1
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_8
+ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_13
+ADC2.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_17
 ADC2.ClockPrescaler=ADC_CLOCK_ASYNC_DIV1
 ADC2.CommonPathInternal=null|null|null|null
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,ClockPrescaler,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC2.ContinuousConvMode=ENABLE
+ADC2.DMAContinuousRequests=ENABLE
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,ClockPrescaler,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,NbrOfConversion,DMAContinuousRequests,CommonPathInternal
+ADC2.NbrOfConversion=3
 ADC2.NbrOfConversionFlag=1
 ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Rank-0\#ChannelRegularConversion=1
+ADC2.Rank-1\#ChannelRegularConversion=2
+ADC2.Rank-2\#ChannelRegularConversion=3
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC2.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC3.CommonPathInternal=null|null|null|null
 ADC3.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
@@ -59,12 +70,30 @@ ADC3.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.ADC2.5.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC2.5.EventEnable=DISABLE
+Dma.ADC2.5.Instance=DMA1_Channel6
+Dma.ADC2.5.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC2.5.MemInc=DMA_MINC_ENABLE
+Dma.ADC2.5.Mode=DMA_CIRCULAR
+Dma.ADC2.5.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.ADC2.5.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC2.5.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.ADC2.5.Priority=DMA_PRIORITY_LOW
+Dma.ADC2.5.RequestNumber=1
+Dma.ADC2.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.ADC2.5.SignalID=NONE
+Dma.ADC2.5.SyncEnable=DISABLE
+Dma.ADC2.5.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.ADC2.5.SyncRequestNumber=1
+Dma.ADC2.5.SyncSignalID=NONE
 Dma.Request0=TIM1_CH4
 Dma.Request1=USART1_RX
 Dma.Request2=USART1_TX
 Dma.Request3=USART2_TX
 Dma.Request4=USART2_RX
-Dma.RequestsNb=5
+Dma.Request5=ADC2
+Dma.RequestsNb=6
 Dma.TIM1_CH4.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM1_CH4.0.EventEnable=DISABLE
 Dma.TIM1_CH4.0.Instance=DMA1_Channel1
@@ -186,39 +215,43 @@ Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA8
-Mcu.Pin11=PA9
-Mcu.Pin12=PA10
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PA15
-Mcu.Pin16=PC12
-Mcu.Pin17=PD2
-Mcu.Pin18=PB3
-Mcu.Pin19=PB4
-Mcu.Pin2=PF0-OSC_IN
-Mcu.Pin20=PB6
-Mcu.Pin21=PB7
-Mcu.Pin22=PB9
-Mcu.Pin23=VP_CORDIC_VS_CORDIC
-Mcu.Pin24=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin25=VP_SYS_VS_Systick
-Mcu.Pin26=VP_SYS_VS_DBSignals
-Mcu.Pin27=VP_TIM1_VS_ControllerModeTrigger
-Mcu.Pin28=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin29=VP_TIM1_VS_no_output4
-Mcu.Pin3=PF1-OSC_OUT
-Mcu.Pin30=VP_TIM1_VS_no_output5
-Mcu.Pin31=VP_TIM1_VS_no_output6
-Mcu.Pin32=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin33=VP_MotorControl_MC_ENABLED
-Mcu.Pin4=PC2
-Mcu.Pin5=PA2
-Mcu.Pin6=PB1
-Mcu.Pin7=PB13
-Mcu.Pin8=PB14
-Mcu.Pin9=PB15
-Mcu.PinsNb=34
+Mcu.Pin10=PB2
+Mcu.Pin11=PB13
+Mcu.Pin12=PB14
+Mcu.Pin13=PB15
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PA15
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PC12
+Mcu.Pin21=PD2
+Mcu.Pin22=PB3
+Mcu.Pin23=PB4
+Mcu.Pin24=PB6
+Mcu.Pin25=PB7
+Mcu.Pin26=PB9
+Mcu.Pin27=VP_CORDIC_VS_CORDIC
+Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin3=PF0-OSC_IN
+Mcu.Pin30=VP_SYS_VS_DBSignals
+Mcu.Pin31=VP_TIM1_VS_ControllerModeTrigger
+Mcu.Pin32=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin33=VP_TIM1_VS_no_output4
+Mcu.Pin34=VP_TIM1_VS_no_output5
+Mcu.Pin35=VP_TIM1_VS_no_output6
+Mcu.Pin36=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin37=VP_MotorControl_MC_ENABLED
+Mcu.Pin4=PF1-OSC_OUT
+Mcu.Pin5=PC2
+Mcu.Pin6=PA2
+Mcu.Pin7=PA4
+Mcu.Pin8=PA5
+Mcu.Pin9=PB1
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
@@ -261,12 +294,12 @@ MotorControl.IPs=CORDIC,SYS,NVIC,RCC,MotorControl,TIM1,ADC1,USART1,DMA
 MotorControl.LOW_MEMORY_FOOTPRINT_REG=false
 MotorControl.LOW_SIDE_IDLE_STATE=false
 MotorControl.LOW_SIDE_SIGNALS_ENABLING=LS_PWM_TIMER
-MotorControl.M1_AMPLIFICATION_GAIN=6.06
+MotorControl.M1_AMPLIFICATION_GAIN=4.26
 MotorControl.M1_ANGC={-715,-2153,-3584,-4984,-6367,-7705,-9010,-10261}
 MotorControl.M1_AUXILIARY_SPEED_SENSOR=NONE
 MotorControl.M1_BEMF_CONSISTENCY_GAIN=64
 MotorControl.M1_BEMF_CONSISTENCY_TOL=64
-MotorControl.M1_BOARD_MAX_CURRENT=20.0
+MotorControl.M1_BOARD_MAX_CURRENT=25.0
 MotorControl.M1_BUS_VOLTAGE_READING=true
 MotorControl.M1_CONSTANT1_D=164333
 MotorControl.M1_CONSTANT1_Q=234761
@@ -311,11 +344,11 @@ MotorControl.M1_IQMAX=19.714317974313154
 MotorControl.M1_LDLQ_RATIO=0.700
 MotorControl.M1_LOW_SIDE_IDLE_STATE=false
 MotorControl.M1_LOW_SIDE_SIGNALS_ENABLING=LS_PWM_TIMER
-MotorControl.M1_LS=0.005
-MotorControl.M1_MAX_APPLICATION_SPEED=5000
+MotorControl.M1_LS=0.00466
+MotorControl.M1_MAX_APPLICATION_SPEED=5400
 MotorControl.M1_MAX_MODULATION_INDEX=81
 MotorControl.M1_MIN_APPLICATION_SPEED=900
-MotorControl.M1_MOTOR_MAX_SPEED_RPM=5000
+MotorControl.M1_MOTOR_MAX_SPEED_RPM=5400
 MotorControl.M1_MOTOR_NAME=BTH420SDPC9EQA
 MotorControl.M1_MOTOR_RATED_FLUX=1.055730079
 MotorControl.M1_MOTOR_VOLTAGE_CONSTANT=43.1
@@ -366,7 +399,7 @@ MotorControl.M1_POWERBOARD_NAME=ATS230704-R1
 MotorControl.M1_PWM_CHARGE_BOOT_CAP_DUTY_CYCLES=0.000
 MotorControl.M1_PWM_CHARGE_BOOT_CAP_MS=10
 MotorControl.M1_PWM_DRIVER_PN=L6390D
-MotorControl.M1_PWM_FREQUENCY=10000
+MotorControl.M1_PWM_FREQUENCY=8000
 MotorControl.M1_PWM_TIMER_BRK_IRQ=TIM1_BRK_TIM15
 MotorControl.M1_PWM_TIMER_SELECTION=PWM_TIM1
 MotorControl.M1_PWM_TIMER_UP_IRQ=TIM1_UP_TIM16
@@ -388,14 +421,14 @@ MotorControl.M1_SS_MEAS_ERRORS_BEFORE_FAULTS=100
 MotorControl.M1_STARTING_ANGLE_DEG=0
 MotorControl.M1_STO_FIFO_DEPTH_01HZ=64
 MotorControl.M1_STO_FIFO_DEPTH_DPP=64
-MotorControl.M1_SW_DEADTIME_NS=3000
+MotorControl.M1_SW_DEADTIME_NS=1000
 MotorControl.M1_TEMPERATURE_READING=false
 MotorControl.M1_TF_KDDIV=8192
 MotorControl.M1_TF_KIDIV=16384
 MotorControl.M1_TF_KPDIV=4096
 MotorControl.M1_TNOISE_NS=4500
 MotorControl.M1_TRANSITION_DURATION=0
-MotorControl.M1_TRISE_NS=7000
+MotorControl.M1_TRISE_NS=2500
 MotorControl.M1_USE_INTERNAL_OPAMP=false
 MotorControl.M1_UV_VOLTAGE_PROT_ENABLING=false
 MotorControl.M1_VARIANCE_THRESHOLD=0.25
@@ -504,8 +537,8 @@ MotorControl.WB_UI_PW_BOARD_MIN_VOLTAGE=18
 MotorControl.WB_UI_VPOL=1.65
 MotorControl.WB_to_Mx_template_version=23-09-08
 MotorControl.WB_to_Mx_version=6.2.0
-MxCube.Version=6.9.2
-MxDb.Version=DB.6.0.92
+MxCube.Version=6.10.0
+MxDb.Version=DB.6.0.100
 NVIC.ADC1_2_IRQn=true\:2\:0\:true\:true\:false\:4\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:true\:true\:false\:2\:false\:true\:true\:true
@@ -553,6 +586,16 @@ PA2.GPIO_Label=M1_BUS_VOLTAGE
 PA2.Locked=true
 PA2.Mode=IN3-Single-Ended
 PA2.Signal=ADC1_IN3
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=VAC_VSEN
+PA4.Locked=true
+PA4.Mode=IN17-Single-Ended
+PA4.Signal=ADC2_IN17
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=PFC_I_CS
+PA5.Locked=true
+PA5.Mode=IN13-Single-Ended
+PA5.Signal=ADC2_IN13
 PA8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA8.GPIO_Label=M1_PWM_UH
 PA8.GPIO_PuPd=GPIO_PULLDOWN
@@ -590,6 +633,10 @@ PB15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB15.Locked=true
 PB15.Mode=PWM Generation3 CH3 CH3N
 PB15.Signal=TIM1_CH3N
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=PFC_EN
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB3.Mode=Asynchronous
 PB3.Signal=USART2_TX
 PB4.Locked=true
@@ -627,6 +674,10 @@ PC14-OSC32_IN.GPIOParameters=GPIO_Label
 PC14-OSC32_IN.GPIO_Label=DEBUG_LED_RED
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=GPIO_Output
+PC15-OSC32_OUT.GPIOParameters=GPIO_Label
+PC15-OSC32_OUT.GPIO_Label=DEBUG_LED_GREEN
+PC15-OSC32_OUT.Locked=true
+PC15-OSC32_OUT.Signal=GPIO_Output
 PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=M1_IPM_TEMP
 PC2.Locked=true
@@ -673,7 +724,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CORDIC_Init-CORDIC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_MotorControl_Init-MotorControl-false-HAL-false,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_ADC2_Init-ADC2-false-HAL-true,12-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_CORDIC_Init-CORDIC-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_MotorControl_Init-MotorControl-false-HAL-false,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_ADC2_Init-ADC2-false-HAL-true,12-MX_I2C1_Init-I2C1-false-HAL-true,13-MX_ADC3_Init-ADC3-false-HAL-true
 ProjectManager.iocOrigin=MotorControl
 RCC.ADC12CLockSelection=RCC_ADC12CLKSOURCE_PLL
 RCC.ADC12Freq_Value=42500000
