--- a/ATS230704_R1.ioc
+++ b/ATS230704_R1.ioc
@@ -185,8 +185,9 @@ ExtraMW.MotorControl.Mode=MotorControl
 ExtraMW.MotorControl.Root=MCSDK_v6.2.0-Full/MotorControl
 ExtraMW.MotorControl.Template=templates
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT
-FREERTOS.Tasks01=Print_Task,8,256,StartPrintTask,As weak,NULL,Static,PrintTaskBuffer,PrintTaskControlBlock;Modbus_Task,40,128,StartModbusTask,As weak,NULL,Static,Modbus_TaskBuffer,Modbus_TaskControlBlock;Sensor_TasK,24,128,StartSensorTask,As weak,NULL,Static,Sensor_TasKBuffer,Sensor_TasKControlBlock
+FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT,configCHECK_FOR_STACK_OVERFLOW
+FREERTOS.Tasks01=Print_Task,8,256,StartPrintTask,As weak,NULL,Static,PrintTaskBuffer,PrintTaskControlBlock;Modbus_Task,40,256,StartModbusTask,As weak,NULL,Static,Modbus_TaskBuffer,Modbus_TaskControlBlock;Sensor_TasK,24,256,StartSensorTask,As weak,NULL,Static,Sensor_TasKBuffer,Sensor_TasKControlBlock
+FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
